tests/spec/fail/interface_missing_method.aja
interface Speaker:
    speak(prefix: str) -> str

type Rock:
    name: str

fuc talk(s: Speaker) -> str:
    return s.speak("Hi")

r = Rock("Stone")
print(talk(r))
